--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-
+  <div id="board"></div>
+  <button id="p1">Player1</button>
+  <button id="p2">Player2</button>
+  <button id="init">Restart</button>
+  <script src="js/app.js"></script>
 </body>
 </html>
